# Project-edoo

./: .gitignore  INSTRUÇÕES DE USO.txt  README.md  acervo.cpp  acervo.h  aluno.cpp  aluno.h  cadastros.cpp  cadastros.h  index.html  launch.json  livros.cpp  livros.h  main.cpp  professor.cpp  professor.h  settings.json  tasks.json  usuario.cpp  usuario.h
.cache/clangd/index/: acervo.cpp.10556DC799ED9687.idx  acervo.h.7D4023BD32859916.idx  addbookwindow.cpp.FD8C9FC95ACF5885.idx  addbookwindow.h.8B679D8431EE5048.idx  aluno.cpp.187F3AF0558A627D.idx  aluno.h.A188EE31420309AC.idx  cadastros.cpp.62DADDDD43E91A05.idx  cadastros.h.F0571117FFAC0B03.idx  livros.cpp.50CEF41A03EB9A52.idx  livros.h.14CC5631FFFC8998.idx  loginwindow.cpp.6D58D748B88B872A.idx  loginwindow.h.BEEF9BBFAD109897.idx  main.cpp.214489CC332B33DA.idx  mainwindow.cpp.CAE7179274DF3A04.idx  mainwindow.h.0ACFCE07707440C1.idx  professor.cpp.1FB2897FF92B579B.idx  professor.h.4B34BAA764D336C6.idx  (+6 more)
GUI_BIBLIOTECA/: CMakeLists.txt  addbookwindow.cpp  addbookwindow.h  addbookwindow.ui  loanbookwindow.cpp  loanbookwindow.h  loanbookwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mybookswindow.cpp  mybookswindow.h  mybookswindow.ui  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui  seeallbookswindow.cpp  seeallbookswindow.h  seeallbookswindow.ui  userbookswindow.cpp  userbookswindow.h  userbookswindow.ui
backend/headers/: acervo.h  aluno.h  cadastros.h  livros.h  professor.h  usuario.h
backend/src/: acervo.cpp  aluno.cpp  cadastros.cpp  livros.cpp  main.cpp  professor.cpp  tempCodeRunnerFile.cpp  usuario.cpp
